# Basic_shell

./: .gitignore  CMakeLists.txt  README.md  basicshell.hpp  main.cpp  testregister.hpp
basic_shell/: CMakeCache.txt  arrowpress.cpp  backspace.cpp  bang.cpp  basic_shell  basicshell.cpp  checkquote.cpp  cmake_install.cmake  deletechar.cpp  getch.cpp  help.cpp  history.cpp  initialshell.cpp  insertchar.cpp  processcommand.cpp  processoptions.cpp  registercommand.cpp  registerdefaults.cpp  tabpress.cpp  testregister.cpp  token.cpp
basic_shell/cmd_map/: add_command.cpp  cmd_map.cpp  find_match.cpp  help_descriptions.cpp  match_args.cpp  send_element.cpp
basic_shell/doc/: basicshell.rst
basic_shell/include/: alias.hpp  basicshell.hpp  cmd_map.hpp
basic_shell/src/: arrowpress.cpp  backspace.cpp  bang.cpp  basicshell.cpp  checkquote.cpp  deletechar.cpp  getch.cpp  help.cpp  history.cpp  initialshell.cpp  insertchar.cpp  processcommand.cpp  processoptions.cpp  registercommand.cpp  registerdefaults.cpp  tabpress.cpp  token.cpp
basic_shell/test_register/: testregister.cpp  testregister.hpp
